# sans_polarization_reduction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-notebooks.yml  build-notebooks.yml.txt  convert-notebooks.yml  docs.yml
docs/: Reduction.html  Reduction.ipynb  index.html
regression_test/: ReductionResults.json  reduction_pipeline.py  reduction_pipeline_regression.py
regression_test/created_output/: ReductionResults.json
src/sans_reduction_utilites/: __init__.py  polarization_correction_functions.py  reduction_functions.py  unwrap_results_dict.py
test_data/Fe3O4Nanoparticles_VSANS26903/: processed_dataDataReductionSummary.txt  processed_dataPlotFullPolMparl_Fe3O4NPs_4.9V_300.0K,4Gd300cmF1400cmM5.5Ang_PolCorr15.0Deg,SubMT.txt  processed_dataPlotFullPolMparl_Fe3O4NPs_4.9V_300.0K,4Gd300cmF1400cmM5.5Ang_PolCorr15.0Deg.txt  processed_dataPlotFullPolMperp_Fe3O4NPs_4.9V_300.0K,4Gd300cmF1400cmM5.5Ang_PolCorr15.0Deg,SubMT.txt  processed_dataPlotFullPolMperp_Fe3O4NPs_4.9V_300.0K,4Gd300cmF1400cmM5.5Ang_PolCorr15.0Deg.txt  processed_dataPlotFullPolStruc_Fe3O4NPs_4.9V_300.0K,4Gd300cmF1400cmM5.5Ang_PolCorr15.0Deg.txt  processed_dataPlotUnpolMparlSub_AlignFe3O4NPs_4.9V_300.0K_Unpol15.0Deg.txt  processed_dataPlotUnpolMparlSub_Fe3O4NPs_4.9V_300.0K_Unpol15.0Deg.txt  processed_dataPlotUnpolMparlSub_GlassyCarbon_0.0V_300.0K_Unpol15.0Deg.txt  processed_dataPlotUnpolStruc_Fe3O4NPs_4.9V_300.0K_Unpol15.0Deg.txt  processed_dataPlotUnpolStruc_GlassyCarbon_0.0V_300.0K_Unpol15.0Deg.txt  processed_dataResultsUnpol_Fe3O4NPs_4.9V_300.0K,4Gd300cmF1400cmM5.5Ang_15.0Deg.txt  (+16 more)
(+13 files in other folders)
