[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sans_reduction_utilites"
version = "0.1.0"
description = "SANS / VSANS polarization data reduction utilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "python-dateutil",
]

[tool.setuptools.packages.find]
where = ["src"]
